--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -2,14 +2,36 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+    
 }
 
-<div class="text-center">
+<div class"form-group col-md-6">
     <h1 class="display-4">Dzień Dobry! @Model.Name</h1>
     <span asp-validation-for="FizzBuzz.Number" class="text-danger"></span>
-        <form method="post">
-            <label asp-for="FizzBuzz.Number"></label>
-            <input asp-for="FizzBuzz.Number" /><br />
-            <button type="submit">Zatwierdź</button>
+        <form method="post" >
+        <label asp-for="FizzBuzz.Number"></label>
+        <br />
+            
+        <input asp-for="FizzBuzz.Number" class="form-control" style="width:30%;"/>
+            <br/>
+        <button type="submit" class="btn btn-primary">Zatwierdź</button>
         </form>
+        <br />
+    @if(Model.Result!="")
+    {
+        @if(Model.Result=="Fizz" || Model.Result=="Buzz"|| Model.Result=="FizzBuzz")
+        {
+            <div class="alert alert-success" style="width:30%;" role="alert">
+                @Model.Result
+            </div>
+        }
+        else
+        {
+            <div class="alert alert-danger" style="width:30%;" role="alert">
+                @Model.Result
+            </div>
+        }
+
+    }
+
 </div>
