nie ma juz czerwonego pustego alertu na starcie strony

--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -17,7 +17,7 @@
         <button type="submit" class="btn btn-primary">Zatwierdź</button>
         </form>
         <br />
-    @if(Model.Result!="")
+    @if (!string.IsNullOrEmpty(Model.Result))
     {
         @if(Model.Result=="Fizz" || Model.Result=="Buzz"|| Model.Result=="FizzBuzz")
         {
