--- a/WebApplication1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication1/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" style="visibility:hidden" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark"  asp-area="" asp-page="/SavedInSession">Saved In Session</a>
+                        </li>
                     </ul>
                 </div>
             </div>
