--- a/WebApplication1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication1/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark"  asp-area="" asp-page="/SavedInSession">Saved In Session</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/HistoriaWyszukiwan">Historia Wyszukiwan</a>
+                        </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
